--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "AWP Church",
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#0A192E",
+  "background_color": "#ffffff",
   "theme_color": "#47A9FF",
   "icons": [
     {
