--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Apostles Of The Word & Prayer Worldwide",
+  "name": "AWPW",
   "short_name": "AWP Church",
   "start_url": "/index.html",
   "display": "standalone",
