--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "AWPW",
   "short_name": "AWP Church",
-  "start_url": "/index.html",
+  "start_url": "https://awpwmedia.org",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#47A9FF",
