--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
-  "name": "AWPW",
+  "name": "Apostles Of The Word & Prayer Worldwide",
   "short_name": "AWP Church",
-  "start_url": "https://awpwmedia.org",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#47A9FF",
   "icons": [
     {
-      "src": "icons/thumbnail-100x100.svg",
-      "sizes": "100x100",
-      "type": "image/svg"
+      "src": "icons/awp-logo-600x600.png",
+      "sizes": "600x600",
+      "type": "image/png"
     },
     {
-      "src": "icons/thumbnail-100x100.svg",
-      "sizes": "100x100",
-      "type": "image/svg"
+      "src": "icons/awp-logo-600x600.png",
+      "sizes": "600x600",
+      "type": "image/png"
     }
   ]
 }
