--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Apostles Of The Word & Prayer Worldwide",
-  "short_name": "AWP Church",
+  "short_name": "AWPW Church",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
