--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Apostles Of The Word & Prayer Worldwide",
   "short_name": "AWPW Church",
-  "start_url": "/awp-media/index.html",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#47A9FF",
